--- a/front-end/src/components/UglyFooter/style.scss
+++ b/front-end/src/components/UglyFooter/style.scss
@@ -5,7 +5,6 @@ article.bg_location {
   & > footer {
     @include justify-content(space-around);
     @include align-items(center);
-    @include flex-wrap();
 
     &, & > #social {
       @include flexbox();
